Fix spacing issue

--- a/style.css
+++ b/style.css
@@ -449,8 +449,11 @@ svg.squiggle path {
   &::after {
     content: '';
     position: absolute;
-    inset: -8rem -10%;
+    inset: -6rem -4rem;
     background: var(--blue);
+    max-width: 100vw;
+    margin: 0 auto;
+    overflow:hidden;
   }
 }
 .sticky-heading-wrapper {
@@ -466,7 +469,7 @@ svg.squiggle path {
   /* font-family: 'Cormorant Garamond'; */
   /* font-weight: 100; */
   width: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   font-weight: var(--font-weight-1);
   /* font-style: italic; */
   text-transform: uppercase;
